--- a/Readme.org
+++ b/Readme.org
@@ -30,4 +30,4 @@ If one does not want to use a second level in the two-level hierarchy, one could
 Personally, I use ~annotation-mode~ to comment symbols in code but use ~org-annotation-code~ to describe longer function flows or logic in python.
 
 * Ideas
-This package is work in progress. Ideally, it should leverage with emacs bookmarks when annotations are to a specific symbol, where the bookmark points to the orgmode annotation.
+This package is work in progress. Ideally, it should leverage with emacs bookmarks when annotations are to a specific symbol, where the bookmark points to the orgmode annotation..
