--- a/Readme.org
+++ b/Readme.org
@@ -13,8 +13,9 @@ The custom id properties link back to the annotated file. Once created, the cust
 The whole tree can be moved and/or demoted somewhere else in the annotation file. If an annotation at the same place is triggered, there are two options. Either the moved bottom-level org-mode item is found by its id or a new strict hierarchy of items will be created as before the subtree was moved. To customize which method is used, see  ~org-annotate-code-search-annotation-method~.  The bottom-up search is useful because although the original headings are automatically inserted when first created by the annotation functions, later on a better heading description or placement of the structure might be decided differently.
 
 What is inserted as custom id links and the original headings is customizable per major-mode of the annotated file. Typically, the first level heading is the file name and the id link is to the file itself. For ~python-mode~, the second level heading is the name of the function, class or global variable definition, which is located either at point or at the nearest upper block. There can be arbitrary subnodes defined. The second level heading can be the symbol at point and the id link a search for this symbol using ~[[file:filename::search]]~.  An annotation is defined as a list of nodes, where each node is a plist with keys ~:id~, ~:heading~ and possibly ~:properties~. A function that allows annotations should return at point such a list. To customize the annotations per mode see ~org-annotate-code-info-alist~ that associates major-modes to such functions. To override the per-mode function or default, see ~org-annotate-code-info-override~.
-* org-annotate-python
-Links are possible by defining a new link type called pydef, eg ~[[pydef:filename.py::newfun.newsubfun.variable]]~. By default a list of depth is presented to the user nd he can select what is to be annotated, eg ~newfun~, ~newfun.newsubfun~ or ~newfun.newsubfun.variable~. If the user chooses to annotate ~newfun.newsubfun~ then by default the annotation will have hierarchy ~filename.py -> newfun -> newfun.newsubfun~. In order to customize the depth of annotations, see ~org-annotate-python-squash-annotation-level~ and ~org-annotate-python-squash-candidates-level~. 
+* Annotators
+** org-annotate-python
+ Links are possible by defining a new link type called pydef, eg ~[[pydef:filename.py::newfun.newsubfun.localvariable]]~. By default a selection list is presented to the user for what is to be annotated, eg ~newfun~, ~newfun.newsubfun~ or ~newfun.newsubfun.localvariable~. If the user chooses to annotate ~newfun.newsubfun~ then  the annotation will have hierarchy ~filename.py -> newfun -> newfun.newsubfun~. In order to customize the defaults, see ~org-annotate-python-squash-annotation-level~ and ~org-annotate-python-squash-candidates-level~. 
 
 * Similar Packages
 This section was true at the time of writing (2020-06-24). I can amend or add upon request.
@@ -30,4 +31,4 @@ This section was true at the time of writing (2020-06-24). I can amend or add up
 Only if the annotated file was changed when the file was not loaded (I think of ~git pull~) or ~annotation-mode~ was not loaded when changes are made, are the annotation positions identified with a nearby search. Personally, I use ~annotation-mode~ to comment symbols in code but use ~org-annotation-code~ to describe longer function flows or logic in python.
 
 * Ideas
-This package is work in progress. Currently thinking of highlights and making temporary lists of annotations per file.
+This package is work in progress. Currently thinking of highlights and making temporary lists of annotations per file. Also making the default a search for word near line number.
