--- a/Readme.org
+++ b/Readme.org
@@ -11,17 +11,17 @@ One can customize ~org-annotate-code~ by always having a top-level heading, eith
 * Details
 The top-level heading is set by ~org-annotate-code-heading0~ and is ~nil~ by default. The annotation file is set by ~org-annotation-code-org-file~. How the hierarchy is created can be customized by setting ~org-annotate-code-info-override~. The above three can be buffer local. If the override annotator is not set, per mode annotators in ~org-annotate-code-info-alist~ are used with fallback the default in ~org-annotate-code-info-default~.
 
-Typically, the first level heading is the file name with id link an org-mode file link. There can be arbitrary subnodes defined. For example, the second level heading can be the symbol "word" at point and the id link a search for this symbol by using ~[[file:filename::word]]~.  By default, the second level is a line number, eg ~[[file:filename::no]]~. An annotation is defined as a list of nodes and each node is a plist with keys ~:id~ and ~:heading~ and possibly ~:properties~. An [[Anotators][annotator]] function that defines annotations should return at point such a list. The alist ~org-annotate-code-info-alist~ associates major-modes to such functions. The override annotator and the default is also such a function. The top-level heading0 is inserted at the level of these annotators.
+Typically, the first level heading is the file name with id link an org-mode file link. There can be arbitrary subnodes defined. For example, the second level heading can be the symbol "word" at point and the id link a search for this symbol by using ~[[file:filename::word]]~.  By default, the second level is a line number, eg ~[[file:filename::no]]~. An annotation is defined as a list of nodes and each node is a plist with keys ~:id~ and ~:heading~ and possibly ~:properties~. An [[Anotators][annotator]] function that defines annotations should return at point such a list. The alist ~org-annotate-code-info-alist~ associates major-modes to such functions. The override annotator and the default is also such a function. Note that the top-level heading is inserted after these annotators have done their work.
 
-The custom id properties link back to the annotated section and conversely are used to create new org-mode items when the ids do not exist. Once created, the custom id links should not be changed but the headings can change at will. The whole tree can be moved and/or demoted somewhere else in the annotation file. If an annotation at the same place is triggered, there are two options. Either the moved bottom-level org-mode item is found by its id or a new strict hierarchy of items will be created as before the subtree was moved. To customize which method is used, see  ~org-annotate-code-search-annotation-method~.  The bottom-up search method is useful because once the original headings and hierachy is created by the annotation functions, later on a better placement of the structure might be decided. The strict method is useful if one wants to preserve a strict hierarchy upon creation, but goes against the use of single custom ids in an org-mode file.
+The custom id properties link back to the annotated section and conversely are used to create new org-mode items when the ids do not exist. Once created, the custom id links should not be changed but the headings can change at will. The whole tree can be moved and/or demoted somewhere else in the annotation file. If an annotation at the same place is triggered, there are two options. Either the moved bottom-level org-mode item is found by its id or a new strict hierarchy of items will be created as before the subtree was moved. To customize which of these two methods is used, see  ~org-annotate-code-search-annotation-method~.  The bottom-up search method is useful because once the original headings and hierachy is created by the annotation functions, later on a better placement of the structure might be decided. It is thus the default. The strict method is useful if one wants to preserve a strict hierarchy upon creation, but it might go against the general principal of unique custom ids in an org-mode file.
 
 * Annotators
 ** Default
 The default creates a tree structure like ~file name -> line number~. 
 ** org-annotate-python
-The org-mode hierarchy, that is the tree structure in the annotation org-mode file, when annotating on a variable definition might look like ~file name -> function definition -> local variable~ or ~filename -> global variable~.  
+The org-mode hierarchy when annotating on a variable definition might look like ~file name -> function definition -> local variable~ or ~filename -> global variable~.  
 
-Links are possible by defining a new link type called pydef, eg ~[[pydef:filename.py::newfun.newsubfun.localvariable]]~. When creating an annotation, by default a selection list is presented to the user for what is to be annotated, eg ~newfun~, ~newfun.newsubfun~ or ~newfun.newsubfun.localvariable~. If the user chooses to annotate ~newfun.newsubfun~ then  the annotation will have hierarchy ~filename.py -> newfun -> newfun.newsubfun~. One can customize the levels and what is presented to be selected, see ~org-annotate-python-squash-annotation-level~ and ~org-annotate-python-squash-candidates-level~. 
+Links are possible by defining a new link type called pydef, eg ~[[pydef:filename.py::newfun.newsubfun.localvariable]]~. When creating an annotation, by default a selection list is presented to the user for what is to be annotated, eg ~newfun~, ~newfun.newsubfun~ or ~newfun.newsubfun.localvariable~. If the user chooses to annotate ~newfun.newsubfun~ then  the annotation will have hierarchy ~filename.py -> newfun -> newfun.newsubfun~. One can customize the levels and what is presented to be selected by changing ~org-annotate-python-squash-annotation-level~ and ~org-annotate-python-squash-candidates-level~, which are ~nil~ by default. 
 
 * Similar Packages
 This section was true at the time of writing (2020-06-24). I can amend or add upon request.
@@ -34,7 +34,7 @@ This section was true at the time of writing (2020-06-24). I can amend or add up
 ~annotation-mode~ is a useful package that annotates non-destructively files. These annotations are not saved in org-mode, but are loaded globally per session from a storage file. It has some very useful features, eg.
  - the annotated words or sentences are highlighted with overlays in the annotated file
  - the annotations are identified by exact positions that are updated live when text is changed
-Only if the annotated file was changed when the file was not loaded (I think of ~git pull~) or ~annotation-mode~ was not loaded when changes are made, then the annotation in ~annotation-mode~ are found with a nearby search. 
+Only if the annotated file was changed when the file was not loaded (think of ~git pull~) or ~annotation-mode~ was not loaded when changes are made, then the annotation in ~annotation-mode~ are found with a nearby search. 
 
 * Ideas
 This package is work in progress. Currently thinking of highlights and making temporary lists of annotations per file. Also making the default a search for word near line number.
