--- a/Readme.org
+++ b/Readme.org
@@ -29,7 +29,7 @@ Links are possible by defining a new link type called pydef, eg ~[[pydef:filenam
 
 It is possible to use relative links using projectile. It is also possible to make the heading dotted, as in python modules.
 ** org-annotate-dired
-Allows to annotate the file at point in dired. The annotations will still be in ~org-annotate-code-org-file~ and possibly under heading0.
+Allows to annotate the file at point in dired. The annotations will still be in ~org-annotate-code-org-file~ and under the top-level heading if set.
 ** org-annotate-word
 This creates a link like [[word:filename::lineno::word]] that searches for the word near a line number in a file. This annotator will not update the line numbers if the text is changes, whether by editing or when the file or package was not loaded (think git). See [[https://github.com/bastibe/annotate.el][annotation-mode]], another package, for live changing the line numbers as text is edited.
 ** org-annotate-index
